Fix overlapping issue

--- a/app/assets/stylesheets/stishly.scss
+++ b/app/assets/stylesheets/stishly.scss
@@ -42,6 +42,7 @@ input, select, textarea {
   -o-transition: width 0.2s ease;
   transition: width 0.2s ease;
 
+  z-index: 1000;
   
   height: calc(100vh - 50px);
   margin-top: 50px;
